--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/x-charts": "^7.8.0",
+    "@react-pdf/renderer": "^3.4.4",
     "@serialport/parser-readline": "^12.0.0",
     "axios": "^1.7.2",
     "flowbite": "^2.3.0",
@@ -46,7 +47,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "electron": "^28.2.0",
-    "electron-builder": "^24.9.1",
+    "electron-builder": "^24.13.3",
     "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
